--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to the AI Knowledge Graph</h1>
-        <p>This website is under construction. Soon, it will visualize AI-related research, reports, and literature.</p>
-        <p>Stay tuned for updates.</p>
+        <h1>Thinking AI</h1>
+        <p>This website is under construction. It will bring together AI-related research, reports, and literatures.</p>
+        <p>More soon.</p>
     </div>
 </body>
 </html>
