--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,26 +16,47 @@
             height: 100vh;
             background-color: #f4f4f4;
         }
+
         .container {
             text-align: center;
             background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 30px;
+            border-radius: 12px;
+            box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);
+            max-width: 500px;
         }
+
         h1 {
-            color: #333;
+            color: #222;
+            margin-bottom: 15px;
         }
+
         p {
-            color: #666;
+            color: #555;
+            margin-bottom: 20px;
+        }
+
+        a {
+            display: inline-block;
+            margin-top: 10px;
+            text-decoration: none;
+            color: #0066cc;
+            font-weight: bold;
+        }
+
+        a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <h1>Thinking AI</h1>
-        <p>This website is under construction. It will bring together AI-related research, reports, and literatures.</p>
-        <p>More soon.</p>
+        <p>Welcome to Thinking AI – a hub for AI-related research, reports, and critical reflections.</p>
+        <p>We are currently developing our platform. Stay tuned for updates.</p>
+        <a href="network_graph.html">See preliminary 'knowledge graph' based on research outputs listed on ePrints</a>
     </div>
 </body>
+
 </html>
