--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Thinking AI | University of Southampton</title>
+    <title>Thinking AI</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -81,12 +81,12 @@
 
 <body>
 
-    <h1>Welcome to Thinking AI</h1>
-    <p>This is a placeholder webpage to announce the start of what will hopefully be a rewarding, productive and community-led initiative of the Faculty of Arts and Humanities at University of Southampton.</p>
+    <h1>Thinking AI</h1>
+    <p>This is a placeholder webpage to announce the start of what will hopefully be a rewarding, productive and community-led initiative of the <a href="#graph">Faculty of Arts and Humanities</a> at University of Southampton.</p>
 
-    <p>The site is aimed at staff and students of the Faculty – to provide a context for learning, sharing and research, including the development of a <a href="#graph">shared knowledge base</a>. The site is also public, to encourage a community of practice and to document a live, ongoing exploration of the growing significance of Artificial Intelligence (AI) in the Higher Education sector, across all activities of research, education, enterprise and infrastructure.</p>
+    <p>The site is aimed at staff and students of the Faculty – to provide a context for learning, sharing and research, including the development of a <a href="https://www.southampton.ac.uk/about/faculties-schools-departments">shared knowledge base</a>. The site is also public, to encourage a community of practice and to document a live, ongoing exploration of the growing significance of Artificial Intelligence (AI) in the Higher Education sector, across all activities of research, education, enterprise and infrastructure.</p>
 
-    <p>The project aligns with and will help inform AI@Southampton – an online space led by the Web Science Institute, which has been established for faculties and other groups to come together, collaborate, and share work that involves artificial intelligence as part of their research.</p>
+    <p>The project aligns with and will help inform <a href="https://sotonac.sharepoint.com/teams/AISouthampton/SitePages/What-is-AI-@-Southampton-.aspx">AI@Southampton</a> – an online space led by the <a href="https://www.southampton.ac.uk/research/institutes-centres/web-science-institute">Web Science Institute</a>, which has been established for faculties and other groups to come together, collaborate, and share work that involves artificial intelligence as part of their research.</p>
 
     <p>Interdisciplinary AI is a University strategic priority, along with data in society, platform governance, social trust, democratic innovation, technological sustainability and other AI-related topics that form WSI’s unique socio-technical remit. It is vital that multiple perspectives from within and across the arts and humanities have a stake in what comes next…</p>
 
@@ -97,21 +97,19 @@
 
     <p>Underpinned by a commitment to Responsible AI—not just in the immediate ethical sense, but in terms of institutional responsibility for shaping AI’s future role in higher education.</p>
 
-    <p><em>NB:</em> The phrase ‘Thinking AI’ is intended to recall Victor Burgin's <em>Thinking Photography</em> (1982), which sought to establish a theoretical account of photography beyond aesthetic appreciation or technical documentation. Burgin recognized that despite photography's century-long history, a coherent theoretical framework remained underdeveloped. We find ourselves with AI at a comparable ‘critical juncture’.</p>
+    <p><strong>NB:</strong> The phrase ‘Thinking AI’ is intended to recall Victor Burgin's <em>Thinking Photography</em> (1982), which sought to establish a theoretical account of photography beyond aesthetic appreciation or technical documentation. Burgin recognized that despite photography's century-long history, a coherent theoretical framework remained underdeveloped. Today, AI might suggest a comparable, if not heightened ‘critical juncture’.</p>
 
     <p>Current discussions largely oscillate between technical specifications on one hand, and ethical concerns on the other. What is missing is a rigorous analysis of AI as a socio-material set of practices and contestations. The topic of AI needs sensitivity and openness, as much as it warrants the richness of critical debate and practical exploration.</p>
 
     <!-- Network Graph Section -->
     <div class="graph-section" id="graph">
-        <h2>Shared Knowledge Base</h2>
-        <p><strong>Hover over nodes to access research outputs via ePrints.</strong></p>
+        <h2>Knowledge Base</h2>
+        <p>Below is a (quick) prototype of a knowledge graph, which <strong>Hover over nodes to access research outputs via ePrints.</strong></p>
+        <p>The pace of development in AI research and implementation is currenlty rapid and, at times, overwhelming. With a view to supporting a community of practice and enhancing capability across the Faculty, a 'Knowledge Base' will be developed, which can hopefully test various ways of sharing ideas, facilitating dialogue, and supporting research and education.</p> 
+        <p>The knowledge graph below is a quickly prepared prototype. It maps AI-related research outputs from the University’s ePrints repository, represenitng 317 research outputs (2024 – present). It will be refined in due course and further tools will be considered to help capture and connect emerging work across disciplines.</p>
         <p>Graph includes 317 research outputs (2024 - present)</p>
 
-        <div class="legend">
-            <span style="background-color:#377eb8;"></span> Low frequency (1–4) &nbsp;
-            <span style="background-color:#ff7f00;"></span> Medium frequency (5–9) &nbsp;
-            <span style="background-color:#e41a1c;"></span> High frequency (10+)
-        </div>
+       
 
         <iframe src="network_graph.html" title="Network Graph"></iframe>
 
