--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
     <img src="approach.png" alt="Approach illustration">
 
     <h2>Approach</h2>
-    <p>Faculty-wide and University-facing. A collaborative initiative to engage critically with artificial intelligence within the domains of education, research, and enterprise, as well as educational administration and infrastructure.</p>
+    <p><strong>Faculty-wide</strong> and <strong>University-facing</strong>. A collaborative initiative to engage critically with artificial intelligence within the domains of <strong>education, research</strong>, and <strong>enterprise</strong>, as well as educational administration and infrastructure.</p>
 
-    <p>Underpinned by a commitment to Responsible AI—not just in the immediate ethical sense, but in terms of institutional responsibility for shaping AI’s future role in higher education.</p>
+    <p>Underpinned by a commitment to <strong>Responsible</strong> AI—to attend to a full range of ethical considerations, including institutional responsibility and sustainability toward shaping AI’s future role in higher education.</p>
 
-    <p><strong>NB:</strong> The phrase ‘Thinking AI’ is intended to recall Victor Burgin's <em>Thinking Photography</em> (1982), which sought to establish a theoretical account of photography beyond aesthetic appreciation or technical documentation. Burgin recognized that despite photography's century-long history, a coherent theoretical framework remained underdeveloped. Today, AI might suggest a comparable, if not heightened ‘critical juncture’.</p>
+    <p><strong>NB:</strong> The phrase ‘Thinking AI’ is intended to recall Victor Burgin's <em><a href="https://archive.org/details/thinkingphotogra0000unse">Thinking Photography</a>a></em> (1982), which sought to establish a theoretical account of photography beyond aesthetic appreciation or technical documentation. At the time of writing, Burgin recognised that despite photography's century-long history, a coherent theoretical framework remained underdeveloped. Today, AI would seem to suggest of a comparable, if not heightened critical juncture.</p>
 
     <p>Current discussions largely oscillate between technical specifications on one hand, and ethical concerns on the other. What is missing is a rigorous analysis of AI as a socio-material set of practices and contestations. The topic of AI needs sensitivity and openness, as much as it warrants the richness of critical debate and practical exploration.</p>
 
