--- a/index.html
+++ b/index.html
@@ -88,18 +88,18 @@
     <p><strong>For further details</strong> and/or to share thoughts, email: <a href="mailto:s.manghani@soton.ac.uk">Prof. Sunil Manghani</a> (Faculty AI Champion).</p>
     <br>
     <h2>AI@Southampton</h2>
-    <p>The project aligns with and will help inform <a href="https://sotonac.sharepoint.com/teams/AISouthampton/SitePages/What-is-AI-@-Southampton-.aspx">AI@Southampton</a> – an online space led by the <a href="https://www.southampton.ac.uk/research/institutes-centres/web-science-institute">Web Science Institute</a>, established for faculties and other groups to come together, collaborate, and share work that involves artificial intelligence as part of their research.</p>
+    <p>The project aligns with and will seek to inform <a href="https://sotonac.sharepoint.com/teams/AISouthampton/SitePages/What-is-AI-@-Southampton-.aspx">AI@Southampton</a> – an online space led by the <a href="https://www.southampton.ac.uk/research/institutes-centres/web-science-institute">Web Science Institute</a>, established for faculties and other groups to come together, collaborate, and share work that involves artificial intelligence as part of their research.</p>
 
-    <p>Interdisciplinary AI is a University strategic priority, along with data in society, platform governance, social trust, democratic innovation, technological sustainability and other AI-related topics that form WSI’s unique socio-technical remit. It is vital that multiple perspectives from within and across the arts and humanities have a stake in what comes next…</p>
+    <p><strong>Interdisciplinary AI</strong> is a University strategic priority, along with data in society, platform governance, social trust, democratic innovation, technological sustainability and other AI-related topics that form WSI’s unique socio-technical remit. It is vital that multiple perspectives from within and across the arts and humanities have a stake in what comes next…</p>
 
     <img src="approach.png" alt="Approach illustration">
 
     <h2>Approach</h2>
-    <p><strong>Faculty-wide</strong> and <strong>University-facing</strong>. A collaborative initiative to engage critically with artificial intelligence within the domains of <strong>education, research</strong>, and <strong>enterprise</strong>, as well as educational administration and infrastructure.</p>
+    <p><strong>Faculty-wide</strong> and <strong>University-facing</strong>: A collaborative initiative to engage critically with artificial intelligence within the domains of <strong>education, research</strong>, and <strong>enterprise</strong>, as well as educational administration and infrastructure.</p>
 
-    <p>Underpinned by a commitment to <strong>Responsible</strong> AI—to attend to a full range of ethical considerations, including institutional responsibility and sustainability toward shaping AI’s future role in higher education.</p>
+    <p>Underpinned by a commitment to <strong>Responsible AI:</strong> to attend to a full range of ethical considerations, including institutional responsibility and sustainability in shaping AI’s future role in higher education.</p>
 
-    <p><strong>NB:</strong> The phrase ‘Thinking AI’ is intended to recall Victor Burgin's <em><a href="https://archive.org/details/thinkingphotogra0000unse">Thinking Photography</a>a></em> (1982), which sought to establish a theoretical account of photography beyond aesthetic appreciation or technical documentation. At the time of writing, Burgin recognised that despite photography's century-long history, a coherent theoretical framework remained underdeveloped. Today, AI would seem to suggest of a comparable, if not heightened critical juncture.</p>
+    <p><strong>NB:</strong> The phrase ‘Thinking AI’ is intended to recall Victor Burgin's <em><a href="https://archive.org/details/thinkingphotogra0000unse">Thinking Photography</a></em> (1982), which sought to establish a theoretical account of photography beyond aesthetic appreciation or technical documentation. At the time of writing, Burgin recognised that despite photography's century-long history, a coherent theoretical framework remained underdeveloped. Today, AI would seem to suggest of a comparable, if not heightened critical juncture.</p>
 
     <p>Current discussions largely oscillate between technical specifications on one hand, and ethical concerns on the other. What is missing is a rigorous analysis of AI as a socio-material set of practices and contestations. The topic of AI needs sensitivity and openness, as much as it warrants the richness of critical debate and practical exploration.</p>
 
