--- a/network_graph.html
+++ b/network_graph.html
@@ -75,7 +75,7 @@
             
 <div style="text-align: center; margin: 20px;">
     <p><strong>Hover over nodes to access research outputs via ePrints.</strong></p>
-    <p>Graph includes 317 research outputs (2024 - present)</p>
+    <p>Graph includes 317 AI/data-related research outputs (2024 - present)</p>
     <div style="display: inline-block; margin: 0 10px;">
         <span style="background-color:#377eb8; width:15px; height:15px; display:inline-block; border-radius:50%;"></span>
         <small>Low frequency (1–4)</small>
