--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <h1>Thinking AI</h1>
     <p>This is a placeholder webpage to announce the start of what will hopefully be a rewarding, productive and community-led initiative of the <a href="https://www.southampton.ac.uk/about/faculties-schools-departments">Faculty of Arts and Humanities</a> at University of Southampton.</p>
 
-    <p>The site is aimed at staff and students of the Faculty – to provide a context for learning, sharing and research, including the development of a <a href="#graph">shared knowledge base</a>. The site is also public, to encourage a community of practice and to document a live, ongoing exploration of the growing significance of Artificial Intelligence (AI) in the Higher Education sector, across all activities of research, education, enterprise and infrastructure.</p>
+    <p>The site is aimed at staff and students of the Faculty – to provide a context for learning, sharing and research, including the development of a <a href="#graph">knowledge base</a>. The site is also public, to encourage a community of practice and to document a live, ongoing exploration of the growing significance of Artificial Intelligence (AI) in the Higher Education sector, across all activities of research, education, enterprise and infrastructure.</p>
     <p><strong>For further details</strong> and/or to share thoughts, email: <a href="mailto:s.manghani@soton.ac.uk">Prof. Sunil Manghani</a> (Faculty AI Champion).</p>
     <br>
     <h2>AI@Southampton</h2>
