--- a/pecuchet.html
+++ b/pecuchet.html
@@ -68,8 +68,8 @@
           <em>Professor of Theory, Practice &amp; Critique</em><br>
           University of Southampton<br>
         </p>
-<p><p><a href="#PhD">PhD supervision</a> and research mentoring.</p>
- <p><strong>For Enquiries:</strong> <a href="mailto:s.manghani@soton.ac.uk">Contact →</a></p>
+<p><p><a href="#PhD">PhD supervision</a> and research mentoring.<br>
+ <strong>For Enquiries:</strong> <a href="mailto:s.manghani@soton.ac.uk">Contact →</a></p>
 
         <p>
           <br>
