--- a/lexia_analysis_barthes.html
+++ b/lexia_analysis_barthes.html
@@ -8,10 +8,10 @@
           <div style="font-weight:700; font-size:1.05rem; margin-bottom:6px;">Lexia [1]</div>
           <div style="margin:8px 0; line-height:1.4">I was deep in one of those daydreams</div>
           <div style="display:grid; grid-template-columns: repeat(2, minmax(0,1fr)); gap:8px; margin:8px 0;">
-            <div><b>HER</b> ✅ &nbsp; <i>Introduces an enigma about the nature of the daydream</i><br/><small>deep in one of those daydreams</small></div>
+            <div><b>HER</b> ✓ &nbsp; <i>Introduces an enigma about the nature of the daydream</i><br/><small>deep in one of those daydreams</small></div>
             <div><b>ACT</b> — &nbsp; <i></i><br/><small></small></div>
-            <div><b>SEM</b> ✅ &nbsp; <i></i><br/><small>deep, daydreams</small><div><b>Motifs:</b> daydream, depth</div></div>
-            <div><b>SYM</b> ✅ &nbsp; <i>Contrasts deep thought with implied shallow surroundings</i><br/><small>deep</small><div><b>Oppositions:</b> depth vs. shallowness</div></div>
+            <div><b>SEM</b> ✓ &nbsp; <i></i><br/><small>deep, daydreams</small><div><b>Motifs:</b> daydream, depth</div></div>
+            <div><b>SYM</b> ✓ &nbsp; <i>Contrasts deep thought with implied shallow surroundings</i><br/><small>deep</small><div><b>Oppositions:</b> depth vs. shallowness</div></div>
             <div><b>REF</b> — &nbsp; <i></i><br/><small></small><div><b>Domains:</b> </div></div>
           </div>
           <div><b>Enumerated meanings (≤4):</b> Mental absorption; Contrast between inner and outer worlds; Universality of daydreaming</div>
